{
  "version": 4,
  "terraform_version": "1.14.8",
  "serial": 12,
  "lineage": "b5e5391a-7564-b27d-91b6-0fe9e3ec7563",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-app",
            "location": "eastus",
            "name": "nsg-snet-app",
            "resource_group_name": "rg-network-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTPS-Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "80",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-HTTP-Inbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1433",
                  "3306",
                  "5432"
                ],
                "direction": "Outbound",
                "name": "Allow-App-To-DB-Outbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.3.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Allow-App-To-PE-Outbound",
                "priority": 110,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-All-Inbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "network-infra"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-database",
            "location": "eastus",
            "name": "nsg-snet-database",
            "resource_group_name": "rg-network-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "10.0.2.0/24",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "",
                "destination_port_ranges": [
                  "1433",
                  "3306",
                  "5432"
                ],
                "direction": "Inbound",
                "name": "Allow-App-Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "10.0.1.0/24",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-All-Inbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Deny-Internet-Outbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "network-infra"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "private_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-private-endpoint",
            "location": "eastus",
            "name": "nsg-snet-private-endpoint",
            "resource_group_name": "rg-network-demo",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "VirtualNetwork",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "443",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Allow-VNet-Inbound",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "VirtualNetwork",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "Deny-All-Inbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              },
              {
                "access": "Deny",
                "description": "",
                "destination_address_prefix": "Internet",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Outbound",
                "name": "Deny-Internet-Outbound",
                "priority": 4096,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "network-infra"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.1.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/snet-app",
            "name": "snet-app",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-demo",
            "service_endpoints": [
              "Microsoft.KeyVault",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-main"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.2.0/24"
            ],
            "default_outbound_access_enabled": true,
            "delegation": [
              {
                "name": "fs-delegation",
                "service_delegation": [
                  {
                    "actions": [
                      "Microsoft.Network/virtualNetworks/subnets/join/action"
                    ],
                    "name": "Microsoft.DBforPostgreSQL/flexibleServers"
                  }
                ]
              }
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/snet-database",
            "name": "snet-database",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-demo",
            "service_endpoints": [
              "Microsoft.Sql",
              "Microsoft.Storage"
            ],
            "virtual_network_name": "vnet-main"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "private_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.0.3.0/24"
            ],
            "default_outbound_access_enabled": true,
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/snet-private-endpoint",
            "name": "snet-private-endpoint",
            "private_endpoint_network_policies": "Enabled",
            "private_endpoint_network_policies_enabled": true,
            "private_link_service_network_policies_enabled": true,
            "resource_group_name": "rg-network-demo",
            "virtual_network_name": "vnet-main"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.this",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/snet-app",
            "network_security_group_id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-app",
            "subnet_id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/snet-app"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.app",
            "azurerm_resource_group.this",
            "azurerm_subnet.app",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "database",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/snet-database",
            "network_security_group_id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-database",
            "subnet_id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/snet-database"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.database",
            "azurerm_resource_group.this",
            "azurerm_subnet.database",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "private_endpoint",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/snet-private-endpoint",
            "network_security_group_id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/networkSecurityGroups/nsg-snet-private-endpoint",
            "subnet_id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/virtualNetworks/vnet-main/subnets/snet-private-endpoint"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_network_security_group.private_endpoint",
            "azurerm_resource_group.this",
            "azurerm_subnet.private_endpoint",
            "azurerm_virtual_network.this"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.0.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "0d991698-4f19-4db0-9ccd-44293700c24e",
            "id": "/subscriptions/dd4de272-7869-4467-9256-8d7b10cb415b/resourceGroups/rg-network-demo/providers/Microsoft.Network/virtualNetworks/vnet-main",
            "location": "eastus",
            "name": "vnet-main",
            "resource_group_name": "rg-network-demo",
            "tags": {
              "Environment": "dev",
              "ManagedBy": "terraform",
              "Project": "network-infra"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "azurerm_resource_group.this"
          ]
        }
      ]
    }
  ]
}